--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -138,8 +138,7 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_margin="4dp"
-                    android:contentDescription="TODO"
-                    android:src="@drawable/ah" />
+                    android:contentDescription="TODO" />
 
             </LinearLayout>
 
