--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -5,7 +5,7 @@
     android:id="@+id/mainBg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.aarafrao.namal.PdfActivity">
+    tools:context=".PdfActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -98,7 +98,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="2dp"
-                android:rotation="180"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -115,6 +114,7 @@
         android:backgroundTint="@color/cl_blue"
         android:padding="4dp"
         android:src="@drawable/star_smile_line"
+        android:visibility="gone"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1,1"
