--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -11,9 +11,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="string/nml"
+        android:text="Cashflow Quadrant"
         android:textColor="@color/cl_blue"
-        android:textSize="46sp"
+        android:textSize="38sp"
+        android:letterSpacing="-0.01"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,10 +25,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-16dp"
-        android:text="string/nmra"
+        android:text="Robert Kiosaki"
         android:textColor="@color/cl_blue"
         android:textSize="28sp"
+        android:letterSpacing="-0.01"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
