--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:background="@color/cl_blue"
     android:layout_height="match_parent"
-    tools:context="com.aarafrao.namal.MainActivity">
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="نمل"
+        android:text="Cashflow Quadrant"
         android:textAllCaps="true"
+        android:textAlignment="center"
         android:textSize="46sp"
         android:textStyle="bold"
         android:textColor="@color/white"
@@ -24,7 +25,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="نمرہ احمد"
+        android:text="Robert Kiosaki"
         android:textColor="@color/white"
         android:textSize="22sp"
         android:layout_marginTop="4dp"
